--- a/src/app/feature/product/product-create/product-create.component.html
+++ b/src/app/feature/product/product-create/product-create.component.html
@@ -18,9 +18,9 @@
             </td>
           </tr>
       <tr>
-        <td>Phonenumber:</td>
+        <td>Partnumber:</td>
         <td>
-          <input [(ngModel)]="newProduct.phoneNumber" type="text" />
+          <input [(ngModel)]="newProduct.partNumber" type="text" />
         </td>
       </tr>
       <tr>
