--- a/src/app/feature/product/product-detail/product-detail.component.html
+++ b/src/app/feature/product/product-detail/product-detail.component.html
@@ -1,1 +1,94 @@
-<p>product-detail works!</p>
+<div *ngIf="product" class="component">
+    <section class="heading">
+      <span class="page-title font-weight-bold font-italic">{{ title }}</span>
+      <span> | <a routerLink="/product-list">Return to List</a></span>
+    </section>
+    <main class="single">
+      <table class="table table-sm">
+        <tr>
+          <td>ID</td>
+          <td>{{ product.id }}</td>
+        </tr>
+        
+        <tr>
+          <td>Vendor:</td>
+          <td>
+            <input
+            [value]="product.vendor.name"
+            class="rounded"
+            type="text"
+            disabled
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>Partnumber:</td>
+          <td>
+            <input
+              [(ngModel)]="product.partNumber"
+              class="rounded"
+              type="text"
+              disabled
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>Name:</td>
+          <td>
+            <input
+              [(ngModel)]="product.name"
+              class="rounded"
+              type="text"
+              disabled
+            />
+          </td>
+        </tr>
+        <tr>
+            <td>Price:</td>
+            <td>
+              <input
+                [(ngModel)]="product.price"
+                class="rounded"
+                type="text"
+                disabled
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Unit:</td>
+            <td>
+              <input
+                [(ngModel)]="product.unit"
+                class="rounded"
+                type="text"
+                disabled
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Photopath:</td>
+            <td>
+              <input
+                [(ngModel)]="product.photoPath"
+                class="rounded"
+                type="text"
+                disabled
+              />
+            </td>
+          </tr>
+      </table>
+    </main>
+    <span>
+      <span
+        ><a routerLink="/product-edit/{{ product.id }}" class="btn btn-sm btn-warning"
+          >Edit</a
+        ></span
+      >
+      <span>
+        |
+        <button (click)="delete()" class="btn btn-sm btn-danger">
+          Delete
+        </button></span
+      >
+    </span>
+  </div>
