fixed routing issue

--- a/src/app/feature/lineitem/lineitem-edit/lineitem-edit.component.html
+++ b/src/app/feature/lineitem/lineitem-edit/lineitem-edit.component.html
@@ -1,1 +1,30 @@
-<p>lineitem-edit works!</p>
+<div class="p-4">
+    <span class="component-title">{{ title }}</span>
+    <p *ngIf="!lineitem">Loading...</p>
+    <div *ngIf="lineitem">
+      <main class="single">
+        <table class="table table-sm">
+              <tr>
+                <td>Product:</td>
+                <td>
+                  <select [(ngModel)]="lineitem.product" class="rounded"[compareWith]="compProduct">
+                    <option *ngFor="let p of products" [ngValue]="p">
+                      {{ p.name + ' | '+ p.vendor.name }}
+                    </option>
+                  </select>
+                </td>
+              </tr>
+            <tr>
+              <td>Quantity:</td>
+              <td>
+                <input [(ngModel)]="lineitem.quantity" type="number" />
+              </td>
+            </tr>
+        </table>
+      </main>
+      <span
+        ><button (click)="save()" class="btn btn-sm btn-primary">
+          Save
+        </button></span
+      >
+    </div>
