--- a/src/app/feature/lineitem/lineitem-create/lineitem-create.component.html
+++ b/src/app/feature/lineitem/lineitem-create/lineitem-create.component.html
@@ -1,5 +1,5 @@
 <div class="p-4">
-    <h1>{{ title }}</h1>
+  <h1 *ngIf="requestId">{{ title + ' - PR ID: ' + requestId }}</h1>
     <table>
         <tr>
           <td>Product:</td>
