--- a/src/app/feature/request/request-lines/request-lines.component.html
+++ b/src/app/feature/request/request-lines/request-lines.component.html
@@ -12,7 +12,7 @@
     </thead>
     <tbody>
      <tr>
-      <td>{{request.user.firstName + ' '+ request.user.lastName}}</td>
+      <td>{{request.user.firstName + ' ' + request.user.lastName }}</td>
       <td>{{request.description}}</td>
       <td>{{request.status}}</td>
       <td>{{'$'+request.total}}</td>
@@ -24,11 +24,11 @@
 <div class="p-4">
   <section class="heading">
     <span class="page-title font-weight-bold font-italic">{{ '[Line-Items]' }}</span>
-    <a routerLink="/lineItem-create">
+    <a routerLink="/lineitem-create/{{requestId}}">
       <img width="20" height="20" src="images/add-icon.png" title="Add New" />
     </a> 
   </section>
-  <table class="table table-striped table-hover"  >
+  <table class="table table-striped table-hover">
     <thead>
       <th>Vendor</th>
       <th>Product</th>
@@ -37,35 +37,24 @@
       <th>Line Total</th>
       <th>Action</th>
     </thead>
-  </table>
     <tr *ngIf="!lineItems || lineItems.length === 0">
       <td  class="text">No line items yet. Please create a new one!</td>
     </tr>
-    <table>
     <tbody>
       <tr *ngFor="let l of lineItems">
         <td>{{l.product.vendor.name}}</td>
         <td>{{l.product.name}}</td>
-        <td>{{l.product.price}}</td>
         <td>{{l.quantity}}</td> 
+        <td>{{'$'+l.product.price}}</td>
         <td>{{'$'+l.request.total}}</td>
 
-        <td><a routerLink="/lineItem-edit/{{ l.id }}">
+        <td><a routerLink="/lineitem-edit/{{ l.id }}">
           <img
             src="images/pencil-icon.png"
             width="20"
             height="20"
             title="Edit Lineitem"
           /> 
-        </a>
-        |
-        <a routerLink="/lineItem-detail/{{ l.id }}">
-          <img
-            src="images/details.png"
-            width="20"
-            height="20"
-            title="Lineitem Details"
-          />
         </a>
         |
         <a>
@@ -77,7 +66,6 @@
             (click)="delete(l.id)"
           />
         </a>
-
         </td>
       </tr>
     </tbody>
