--- a/src/app/feature/product/product-create/product-create.component.html
+++ b/src/app/feature/product/product-create/product-create.component.html
@@ -1,3 +1,5 @@
+
+<app-menu></app-menu>
 <div class="p-4">
     <h1>{{ title }}</h1>
     <table>
@@ -33,12 +35,6 @@
         <td>Unit:</td>
         <td>
           <input [(ngModel)]="newProduct.unit" type="number" />
-        </td>
-      </tr>
-      <tr>
-        <td>Photopath:</td>
-        <td>
-          <input [(ngModel)]="newProduct.photoPath" type="text" />
         </td>
       </tr>
       
