--- a/src/app/feature/user/user-create/user-create.component.html
+++ b/src/app/feature/user/user-create/user-create.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="p-4">
     <h1>{{ title }}</h1>
     <table>
@@ -50,5 +51,5 @@
         </td>
       </tr>
     </table>
-    <button (click)="addVendor()">Add User</button>
+    <button (click)="add()">Add User</button>
   </div>
