--- a/src/app/feature/product/product-detail/product-detail.component.html
+++ b/src/app/feature/product/product-detail/product-detail.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div *ngIf="product" class="component">
     <section class="heading">
       <span class="page-title font-weight-bold font-italic">{{ title }}</span>
@@ -66,16 +67,6 @@
             </td>
           </tr>
           <tr>
-            <td>Photopath:</td>
-            <td>
-              <input
-                [(ngModel)]="product.photoPath"
-                class="rounded"
-                type="text"
-                disabled
-              />
-            </td>
-          </tr>
       </table>
     </main>
     <span>
