--- a/src/app/feature/product/product-list/product-list.component.html
+++ b/src/app/feature/product/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="p-4">
     <section class="heading">
       <span class="page-title font-weight-bold font-italic">{{ title }}</span>
@@ -7,24 +8,20 @@
     </section>
     <table class="table table-striped table-hover">
       <thead>
-        <th>Id</th>
         <th>Vendor</th>
         <th>Partnumber</th>
         <th>Name</th>
         <th>Price</th>
         <th>Unit</th>
-        <th>Photopath</th>
         <th>Action</th>
       </thead>
       <tbody>
         <tr *ngFor="let p of products">
-          <td>{{p.id}}</td>
           <td>{{p.vendor.name}}</td>
           <td>{{p.partNumber}}</td> 
           <td>{{p.name}}</td>
           <td>{{p.price}}</td>
           <td>{{p.unit}}</td>
-          <td>{{p.photoPath}}</td>
           
           <td><a routerLink="/product-edit/{{ p.id }}">
             <img
