--- a/src/app/feature/request/request-list/request-list.component.html
+++ b/src/app/feature/request/request-list/request-list.component.html
@@ -1,8 +1,9 @@
+<app-menu></app-menu>
 <div class="p-4">
     <section class="heading">
       <span class="page-title font-weight-bold font-italic">{{ title }}</span>
       <a routerLink="/request-create">
-        <img *ngIf="this.isAdmin" width="20" height="20" src="images/add-icon.png" title="Add New" />
+        <img width="20" height="20" src="images/add-icon.png" title="Add New" />
       </a>
       <span
         style="
@@ -15,25 +16,21 @@
     </section>
     <table class="table table-striped table-hover">
       <thead>
-        <th>Id</th>
         <th>User</th>
         <th>Description</th>
         <th>Justification</th>
         <th>Dateneeded</th>
-        <th>Deleverymode</th>
         <th>Status</th>
         <th>Total</th>
-        <th>Submitteddate</th>
+        <th>Submitted Date</th>
         <th>Action</th>
       </thead>
       <tbody>
         <tr *ngFor="let r of requests">
-          <td>{{r.id}}</td>
           <td>{{r.user.firstName + ' '+ r.user.lastName}}</td>
           <td>{{r.description}}</td> 
-          <td>{{r.dateNeeded}}</td>
-          <td>{{r.deliveryMode}}</td>
           <td>{{r.justification}}</td>
+          <td>{{r.dateNeeded}}</td>
           <td>{{r.status}}</td>
           <td>{{r.total}}</td>
           <td>{{r.submittedDate}}</td>
