--- a/src/app/feature/user/user-list/user-list.component.html
+++ b/src/app/feature/user/user-list/user-list.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="p-4">
     <section class="heading">
       <span class="page-title font-weight-bold font-italic">{{ title }}</span>
@@ -7,19 +8,17 @@
     </section>
     <table class="table table-striped table-hover">
       <thead>
-        <th>Id</th>
-        <th>Username</th>
+        <th>User Name</th>
         <th>Password</th>
         <th>Firstname</th>
         <th>Lastname</th>
-        <th>Phonenumber</th>
+        <th>Phone Number</th>
         <th>Email</th>
         <th>Reviewer</th>
         <th>Admin</th>
       </thead>
       <tbody>
         <tr *ngFor="let u of users">
-          <td>{{u.id}}</td>
           <td>{{u.username}}</td>
           <td>{{u.password}}</td>
           <td>{{u.firstName}}</td>
