fixed issues w/ routing

--- a/src/app/feature/product/product-create/product-create.component.html
+++ b/src/app/feature/product/product-create/product-create.component.html
@@ -1,7 +1,10 @@
 
 <app-menu></app-menu>
 <div class="p-4">
-    <h1>{{ title }}</h1>
+  <section class="heading">
+    <span class="page-title font-weight-bold font-italic">{{ title }}</span>
+    <span> | <a routerLink="/product-list">Return to List</a></span>
+  </section>
     <table>
         <tr>
           <td>Vendor:</td>
