--- a/src/app/feature/product/product-edit/product-edit.component.html
+++ b/src/app/feature/product/product-edit/product-edit.component.html
@@ -1,6 +1,7 @@
 <app-menu></app-menu>
 <div class="p-4">
     <span class="component-title">{{ title }}</span>
+    <span> | <a routerLink="/product-list">Return to List</a></span>
     <p *ngIf="!product">Loading...</p>
     <div *ngIf="product">
       <main class="single">
