--- a/src/app/feature/request/request-approve/request-approve.component.html
+++ b/src/app/feature/request/request-approve/request-approve.component.html
@@ -2,6 +2,7 @@
 <div class="p-4">
   <section class="heading">
     <span class="page-title font-weight-bold font-italic">{{ title }}</span>
+    <span> | <a routerLink="/request-list">Return to List</a></span>
   </section>
 <table class="table table-striped table-hover">
     <thead>
