--- a/src/app/feature/request/request-create/request-create.component.html
+++ b/src/app/feature/request/request-create/request-create.component.html
@@ -1,6 +1,7 @@
 <app-menu></app-menu>
 <div class="p-4">
     <h1>{{ title }}</h1>
+    <span> | <a routerLink="/request-list">Return to List</a></span>
     <table>
         <tr>
           <td>User:</td>
