--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -70,11 +70,11 @@
     </main>
     <span>
       <span
-        ><a routerLink="/request-edit/{{ request.id }}" class="btn btn-sm btn-warning"
+        ><a *ngIf="this.isAdmin" routerLink="/request-edit/{{ request.id }}" class="btn btn-sm btn-warning"
           >Edit</a
         ></span
       >
-      <span>
+      <span *ngIf="this.isAdmin">
         |
         <button (click)="delete()" class="btn btn-sm btn-danger">
           Delete
