--- a/src/app/feature/user/user-detail/user-detail.component.html
+++ b/src/app/feature/user/user-detail/user-detail.component.html
@@ -102,11 +102,11 @@
     </main>
     <span>
       <span
-        ><a routerLink="/user-edit/{{ user.id }}" class="btn btn-sm btn-warning"
+        ><a *ngIf="this.isAdmin" routerLink="/user-edit/{{ user.id }}" class="btn btn-sm btn-warning"
           >Edit</a
         ></span
       >
-      <span>
+      <span *ngIf="this.isAdmin">
         |
         <button (click)="delete()" class="btn btn-sm btn-danger">
           Delete
